Fixed some dynamic grid layout issues

--- a/live/www/css/mtb.css
+++ b/live/www/css/mtb.css
@@ -961,6 +961,7 @@ table.grid {
     border-color: black black black black;
     border-collapse: collapse;
     background-color: black;
+    box-sizing: content-box;
 }
 
 tr.grid {	
@@ -974,7 +975,7 @@ table.grid th {
     background-color: #FFFFFF;
     font-size:9px;
     vertical-align:bottom;
-	padding:0 0 4px;
+    padding:0 0 4px;
 }
 
 table.grid td
@@ -983,10 +984,11 @@ table.grid td
     border-style: none groove groove none;
     border-color: black black black black;
     background-color: #FFFFFF;
-    font-size:9px;
+    font-size:10px;
     vertical-align:middle;
     height: 20px;
-	padding:0;
+    padding:0;
+    box-sizing: content-box;
 }
 
 table.grid td > a {
@@ -1038,11 +1040,19 @@ table.grid img {
 	display:inline;
 }
 
-table.grid td img[alt="H"],
-table.grid td img[alt="-"] {
+table.grid td img[alt="H"]
+ {
 	display:block;
 	width:100%;
-	height:23px;
+	height:100%;
+	margin:0;
+	padding:0;
+}
+
+table.grid td img[alt="-"]
+{
+	width:10px;
+	height:10px;
 	margin:0;
 	padding:0;
 }
